# tiny_vfs

./: .gitignore  CMakeLists.txt  README.md  build_and_test.bat  tiny_vfs.h
examples/: example_vfs.cpp
examples/assets/: hello.txt
tests/: tiny_vfs_test.cpp
